# project-template

./: README.md  pyproject.toml
scripts/: run_demo.py
src/project_template.egg-info/: PKG-INFO  SOURCES.txt
src/project_template/decision/: rules.py
src/project_template/features/: extractors.py
src/project_template/hmi/: placeholder.py
src/project_template/input/: loader.py
src/project_template/main/: pipeline.py
src/project_template/math/: local_math.py
src/project_template/models/: scorer.py
src/project_template/output/: writer.py
src/project_template/processing/: etl.py
tests/: test_pipeline_smoke.py
